      tool and 'CMF Action' objects to categories or subcategories. To
      migrate oldstyle Actions (ActionInformation objects) you can create a
      snapshot and re-import Actions using the portal_setup tool.

    - TypesTool: TypeInformation classes are now pluggable.
      Any class registered for ITypeInformation can now be used in the
      TypesTool.

  Bug Fixes

    - CMFCore.exportimport.content:  Ensure that BODYFILE in our "faux"
      request is a file-like object, FBO objects which expect to call its
      'read' method.

    - Got rid of the "CMF Site" and "Configured CMF Site" duality in the ZMI
      add list by removing the "CMF Site" class registration in CMFDefault
      and moving the "Configured CMF Site" registration from CMFSetup into
      CMFDefault, renaming it to "CMF Site". 
      (http://www.zope.org/Collectors/CMF/364)

    - Updated RELEASE.txt and the slurp_release script to now use Subversion
      instead of CVS, and to reflect the new tag/branch naming conventions
      used in the CMF repository.

    - Added testing framework to suppress / examine output from warnings
      module and from zLOG.

    - CMFUid/UniqueIdGeneratorTool.py: Replaced the old BTree.Length.Length
      implementation by a simple counter. Using a BTree.Length.Length object
      as counter may have caused setting the same unique id to multiple 
      objects under high load. The tools counter gets automigrated on the 
      first access. This is a forward port from CMF-1_5-branch before the 
      CMF 1.5.2 release.

    - CMFCore.utils.ToolInit: For icon registration to work with ToolInit
      you would have to have the same product_name parameter as the actual
      product name of the product. Now we just pick up that product name from
      the product context instead, and ignore the product_name parameter (with
      a deprecation warning).

    - CMFSetup: Merged the registerClass and registerIcon call since 